<resources>
    <string name="name.app"
            translatable="false">Tool Changer</string>
    <string name="upper_title_welcome">Welcome</string>
    <string name="upper_text_sign_up">Sign Up</string>
    <string name="upper_text_sign_in">Sign In</string>
    <string name="upper_label_last_name">Last name</string>
    <string name="upper_label_first_name">First name</string>
    <string name="upper_label_email">Email</string>
    <string name="upper_label_phone">Phone</string>
    <string name="upper_label_address">Address</string>
    <string name="upper_label_city">City</string>
    <string name="upper_label_country">Country</string>
    <string name="upper_label_password">Password</string>
    <string name="text_accept_eula">By clicking the sign up button you accept the EULA</string>
    <string name="error_went_wrong_database">Something went wrong with the database</string>
    <string name="error_all_fields_not_filled">Not all fields are filled in!</string>
    <string name="error_email_already_used">Email already used</string>
    <string name="error_cannot_be_empty">Cannot be empty</string>
    <string name="error_incorrect_email">Incorrect email</string>
    <string name="upper_label_postal_code">Postcode</string>
    <string name="error_incorrect_phone">Incorrect phone number</string>
    <string name="upper_title_connection">Connection</string>
    <string name="text_new_phone">It looks like you are trying to connect with a new phone.</string>
    <string name="text_email_send">An email was sent to the email address provided. You can return to the connection screen.</string>
    <string name="error_failed_to_connect">Failed to connect, wrong email given</string>
    <string name="link_see_all"><u>See all</u></string>
    <string name="label_in_the_area">In the area</string>
    <string name="offer_title">Offer Title</string>
    <string name="offer_image_of_the_tool">Image of the tool</string>
    <string name="offer_city">City</string>
    <string name="offer_add_one">Add an offer</string>
    <string name="label_your_offer">Your offer\'s</string>
    <string name="content_description_profile_button"
            translatable="false">Profile button</string>
    <string name="label_my_reservation">My reservation</string>
    <string name="offer_do_a_reservation">Do a reservation</string>
    <string name="menu_search">Search</string>
    <string name="menu_home">Home</string>
    <string name="menu_chat">Chat</string>
    <string name="upper_text_create_offer">Create offer</string>
    <string name="content_description_image_of_the_tools">Image of the tools</string>
    <string name="upper_label_title">Title of the offer</string>
    <string name="upper_create_offer_button">Create</string>
    <string name="label_select_category">Select one category</string>
    <string name="chips_electric">Electric</string>
    <string name="chips_thermal">Thermal</string>
    <string name="chips_manual">Manual</string>
    <string name="error_to_long_30">Must have less than 30 characters</string>
    <string name="error_during_upload_image">Error append when getting image</string>
    <string name="upper_delete">Delete</string>
    <string name="upper_label_category">Category</string>
    <string name="content_description_add_button"
            translatable="false">Add button</string>
    <string name="upper_label_reserved_by">Reserved by</string>
    <string name="upper_label_not_yet_reserved">Not yet reserved</string>
    <string name="upper_text_book">Book</string>
    <string name="upper_title_reservation">Booking</string>
    <string name="upper_label_borrowing_date">Borrowing date</string>
    <string name="upper_label_return_date">Return date</string>
    <string name="upper_label_owner_validate">The owner has to validate</string>
    <string name="upper_label_cancel">Cancel</string>
    <string name="toast_reservation_send">Reservation Send</string>
    <string name="toast_reservation_canceled">Reservation canceled</string>
    <string name="upper_label_confirm">Confirm</string>
    <string name="toast_booking_validate">Booking validate</string>
    <string name="upper_label_you_need_to_confirm">You need to confirm</string>
    <string name="upper_label_your_reservation_confirmed">Your reservation is confirmed</string>
    <string name="toast_error_delete_offer">Failed to delete the offer, try later</string>
    <string name="state_open"
            translatable="false">open</string>
    <string name="state_close"
            translatable="false">close</string>
    <string name="nav_drawer_parameter">Parameter</string>
    <string name="nav_drawer_account">Account</string>
    <string name="nav_drawer_dark_mode">Dark mode</string>
    <string name="nav_drawer_language">Language</string>
    <string name="nav_drawer_light_mode">Light mode</string>
    <string name="language_french"
            translatable="false">Français</string>
    <string name="language_english"
            translatable="false">English</string>
    <string name="upper_label_modify">Modify</string>
    <string name="toast_account_updated">Account Updated</string>
    <string name="nav_drawer_log_out">Log out</string>
    <string name="upper_label_search">Search</string>
</resources>