<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.start.StartMenuFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/fragment_start_menu_title_tv"
                android:text="@string/upper_title_welcome"
                style="@style/Title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:autoSizeTextType="uniform" />

        <ImageView
                android:id="@+id/fragment_start_menu_IV"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_height="220dp"
                style="@style/Box.top_radius"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/constraintLayout">

            <TextView
                    android:text="@string/upper_text_sign_up"
                    android:id="@+id/fragment_start_menu_sign_up_button"
                    style="@style/Button.full"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/fragment_start_menu_sign_in_button"
                    android:autoSizeTextType="uniform"
                    android:layout_marginBottom="15dp" />

            <TextView
                    android:text="@string/upper_text_sign_in"
                    android:id="@+id/fragment_start_menu_sign_in_button"
                    style="@style/Button.empty"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_start_menu_sign_up_button"
                    android:autoSizeTextType="uniform"
                    android:layout_marginTop="15dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>