<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".view.main.myOffer.MyOfferFragment"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                style="@style/returnButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.03"
                app:layout_constraintVertical_bias="0.007"
                android:id="@+id/fragment_my_offer_back_btn" />

        <TextView
                android:text="@string/offer_title"
                style="@style/Title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/fragment_my_offer_title_tv"
                android:autoSizeTextType="uniform" />

        <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/Box.top_radius"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="100dp"
                app:layout_constraintTop_toBottomOf="@+id/fragment_my_offer_title_tv">

            <TextView
                    android:text="@string/upper_label_first_name"
                    android:id="@+id/fragment_my_offer_first_name_tv"
                    style="@style/Text.label"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toTopOf="@+id/fragment_my_offer_first_name_et" />

            <EditText
                    android:inputType="none"
                    android:id="@+id/fragment_my_offer_first_name_et"
                    style="@style/editText.disabled"
                    android:hint="@string/upper_label_first_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_my_offer_first_name_tv"
                    android:importantForAutofill="no"
                    app:layout_constraintBottom_toTopOf="@+id/fragment_my_offer_last_name_tv"
                    android:autoSizeTextType="uniform"
                    tools:ignore="DuplicateSpeakableTextCheck"
                    android:focusable="false" />

            <TextView
                    android:text="@string/upper_label_last_name"
                    android:id="@+id/fragment_my_offer_last_name_tv"
                    style="@style/Text.label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_my_offer_first_name_et"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toTopOf="@+id/fragment_my_offer_last_name_et"
                    app:layout_constraintHorizontal_bias="1.0" />

            <EditText
                    android:inputType="none"
                    android:id="@+id/fragment_my_offer_last_name_et"
                    style="@style/editText.disabled"
                    android:hint="@string/upper_label_last_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_my_offer_last_name_tv"
                    android:importantForAutofill="no"
                    app:layout_constraintBottom_toTopOf="@+id/fragment_my_offer_email_tv"
                    android:autoSizeTextType="uniform"
                    tools:ignore="DuplicateSpeakableTextCheck"
                    android:focusable="false" />

            <TextView
                    android:text="@string/upper_label_email"
                    android:id="@+id/fragment_my_offer_email_tv"
                    style="@style/Text.label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_my_offer_last_name_et"
                    android:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toTopOf="@+id/fragment_my_offer_email_et" />

            <EditText
                    android:inputType="none"
                    android:id="@+id/fragment_my_offer_email_et"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_my_offer_email_tv"
                    android:hint="@string/upper_label_email"
                    style="@style/editText.disabled"
                    android:importantForAutofill="no"
                    app:layout_constraintBottom_toTopOf="@+id/fragment_my_offer_phone_tv"
                    android:autoSizeTextType="uniform"
                    tools:ignore="DuplicateSpeakableTextCheck,TextFields"
                    android:focusable="false" />

            <TextView
                    android:text="@string/upper_label_phone"
                    android:id="@+id/fragment_my_offer_phone_tv"
                    style="@style/Text.label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_my_offer_email_et"
                    android:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toTopOf="@+id/fragment_my_offer_phone_et" />

            <EditText
                    android:inputType="none"
                    android:id="@+id/fragment_my_offer_phone_et"
                    android:hint="@string/upper_label_phone"
                    style="@style/editText.disabled"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_my_offer_phone_tv"
                    android:importantForAutofill="no"
                    android:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toTopOf="@+id/fragment_my_offer_address_tv"
                    tools:ignore="DuplicateSpeakableTextCheck,TextFields"
                    android:focusable="false" />

            <TextView
                    android:text="@string/upper_label_address"
                    android:id="@+id/fragment_my_offer_address_tv"
                    style="@style/Text.label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_my_offer_phone_et"
                    android:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toTopOf="@+id/fragment_my_offer_address_et"
                    android:focusable="false" />

            <EditText
                    android:inputType="none"
                    android:id="@+id/fragment_my_offer_address_et"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_my_offer_address_tv"
                    android:hint="@string/upper_label_address"
                    style="@style/editText.disabled"
                    android:importantForAutofill="no"
                    android:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toTopOf="@+id/fragment_my_offer_postal_code_tv"
                    tools:ignore="DuplicateSpeakableTextCheck"
                    android:focusable="false" />

            <TextView
                    android:text="@string/upper_label_postal_code"
                    android:id="@+id/fragment_my_offer_postal_code_tv"
                    style="@style/Text.label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_my_offer_address_et"
                    android:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toTopOf="@+id/fragment_my_offer_postal_code_et" />

            <EditText
                    android:inputType="none"
                    android:id="@+id/fragment_my_offer_postal_code_et"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_my_offer_postal_code_tv"
                    android:hint="@string/upper_label_postal_code"
                    style="@style/editText.disabled"
                    android:importantForAutofill="no"
                    android:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toTopOf="@+id/fragment_my_offer_city_tv"
                    tools:ignore="DuplicateSpeakableTextCheck"
                    android:focusable="false" />

            <TextView
                    android:text="@string/upper_label_city"
                    android:id="@+id/fragment_my_offer_city_tv"
                    style="@style/Text.label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_my_offer_postal_code_et"
                    android:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toTopOf="@+id/fragment_my_offer_city_et" />

            <EditText
                    android:inputType="none"
                    android:id="@+id/fragment_my_offer_city_et"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_my_offer_city_tv"
                    android:hint="@string/upper_label_city"
                    style="@style/editText.disabled"
                    android:importantForAutofill="no"
                    android:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toTopOf="@+id/fragment_my_offer_country_tv"
                    tools:ignore="DuplicateSpeakableTextCheck"
                    android:focusable="false" />

            <TextView
                    android:text="@string/upper_label_country"
                    android:id="@+id/fragment_my_offer_country_tv"
                    style="@style/Text.label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_my_offer_city_et"
                    android:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toTopOf="@+id/fragment_my_offer_country_et" />

            <EditText
                    android:inputType="none"
                    android:id="@+id/fragment_my_offer_country_et"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_my_offer_country_tv"
                    android:hint="@string/upper_label_country"
                    style="@style/editText.disabled"
                    android:importantForAutofill="no"
                    android:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toTopOf="@+id/fragment_my_offer_category_tv"
                    tools:ignore="DuplicateSpeakableTextCheck"
                    android:focusable="false" />

            <TextView
                    android:text="@string/upper_label_category"
                    android:id="@+id/fragment_my_offer_category_tv"
                    style="@style/Text.label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_my_offer_country_et"
                    android:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toTopOf="@+id/fragment_my_offer_category_et" />

            <EditText
                    android:inputType="none"
                    android:id="@+id/fragment_my_offer_category_et"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_my_offer_category_tv"
                    android:hint="@string/upper_label_category"
                    style="@style/editText.disabled"
                    android:importantForAutofill="no"
                    android:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toTopOf="@+id/fragment_my_offer_delete_btn"
                    tools:ignore="DuplicateSpeakableTextCheck"
                    android:focusable="false" />

            <TextView
                    android:text="@string/upper_delete"
                    android:id="@+id/fragment_my_offer_delete_btn"
                    style="@style/Button.empty"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_my_offer_category_et"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:autoSizeTextType="uniform"
                    android:layout_marginBottom="100dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>